# glimpse

./: Cargo.toml  README.md
crates/glimpse-core/: Cargo.toml
crates/glimpse-server/: Cargo.toml
crates/glimpse-server/src/: error.rs  lib.rs  main.alternateversion  main.rs  main.rs.ori  main.rs.ori.2  main.rs.works  main.tracing  server.rs  tick.rs  types.rs  warp_version.rs
crates/glimpse-server/src/handlers/: mod.rs  udp.rs  websocket.rs
crates/glimpse-web/: Cargo.toml  index.html  package.json
crates/glimpse-web/src/: index.tsx  lib.rs
crates/glimpse-web/src/components/: GlimpseMetrics.tsx
glimpse-web/src/components/: GlimpseMetrics.tsx
glimpse-web/src/hooks/: useGlimpse.ts
glimpse-web/src/types/: glimpse.d.ts
