[package]
name = "glimpse-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
glimpse-core = { path = "../glimpse-core" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "CloseEvent"
] }
serde = { workspace = true }
js-sys = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Add this section for npm package configuration
[package.metadata.npm]
name = "glimpse-web"
version = "0.1.0"
files = ["pkg/*"]
